<resources>
    <string name="app_name">Trial X</string>
    <string name="action_genre">What\'s new ></string>
    <string name="home">Home</string>
    <string name="romance">Romance Comic</string>
    <string name="action">Action Comic</string>
    <string name="romance_genre">What\'s hot ></string>
    <string name="genre">SampleGenre</string>
    <string name="comic">sampleComic</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
